<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Medical_Index_Activity">

        <LinearLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#1DB954">

            <ImageView
                android:contentDescription="@string/app_name"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ico_stroke"
                android:layout_margin="12dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ttl_index"
                android:textSize="31sp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:layout_marginTop="40dp"
                android:layout_marginStart="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/title">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="20sp"
                android:textColor="#191414"
                android:textStyle="bold"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="5sp"
                android:layout_marginTop="10sp">

                <RadioButton
                    android:id="@+id/rb_gender_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:text="@string/rb_male"
                    android:textColor="#191414"
                    android:textSize="17sp"/>


                <RadioButton
                    android:id="@+id/rb_gender_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_female"
                    android:textSize="17sp"
                    android:textColor="#191414"
                    android:layout_marginStart="20sp"/>

                <RadioButton
                    android:id="@+id/rb_gender_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_other"
                    android:textSize="17sp"
                    android:textColor="#191414"
                    android:layout_marginStart="20sp"
                    android:layout_marginEnd="10sp"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/work_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/glucose">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/work_type"
                android:textSize="20sp"
                android:textColor="#191414"
                android:textStyle="bold"
                android:layout_marginStart="20sp"/>

            <Spinner
                android:id="@+id/spn_work_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:padding="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/hypertension"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/residence">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hypertension"
                android:textSize="20sp"
                android:textColor="#191414"
                android:textStyle="bold"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10sp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="23sp">
                <RadioButton
                    android:id="@+id/rb_yes_hypertension"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_yes"
                    android:textSize="17sp"
                    android:textColor="#191414"/>

                <RadioButton
                    android:id="@+id/rb_no_hypertension"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_no"
                    android:textSize="17sp"
                    android:textColor="#191414"
                    android:layout_marginStart="15sp"
                    android:layout_marginEnd="10sp"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/heart_disease"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/hypertension">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heart_disease"
                android:textSize="20sp"
                android:textColor="#191414"
                android:textStyle="bold"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10sp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="23sp">
                <RadioButton
                    android:id="@+id/rb_yes_heart_disease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_yes"
                    android:textSize="17sp"
                    android:textColor="#191414"
                    android:layout_marginStart="43sp"/>

                <RadioButton
                    android:id="@+id/rb_no_heart_disease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_no"
                    android:textSize="17sp"
                    android:textColor="#191414"
                    android:layout_marginStart="15sp"
                    android:layout_marginEnd="10sp"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ever_married"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/heart_disease">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ever_married"
                android:textSize="20sp"
                android:textColor="#191414"
                android:textStyle="bold"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10sp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="5sp">
                <RadioButton
                    android:id="@+id/rb_yes_married"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_yes"
                    android:textSize="17sp"
                    android:textColor="#191414"
                    android:layout_marginStart="9sp"/>

                <RadioButton
                    android:id="@+id/rb_no_married"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_no"
                    android:textSize="17sp"
                    android:textColor="#191414"
                    android:layout_marginStart="15sp"
                    android:layout_marginEnd="10sp"
                    />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/smoking_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/ever_married">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smoking_status"
                android:textSize="20sp"
                android:textColor="#191414"
                android:textStyle="bold"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10sp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="6sp"
                android:layout_marginBottom="20sp">
                <RadioButton
                    android:id="@+id/rb_formerly_smoked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_formerly"
                    android:textSize="17sp"
                    android:textColor="#191414"
                    android:layout_marginStart="5sp"/>

                <RadioButton
                    android:id="@+id/rb_smoked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_yes"
                    android:textSize="17sp"
                    android:textColor="#191414"
                    android:layout_marginStart="7sp"/>

                <RadioButton
                    android:id="@+id/rb_never_smoked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_no"
                    android:textSize="17sp"
                    android:textColor="#191414"
                    android:layout_marginStart="14sp"
                    android:layout_marginEnd="10sp"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/residence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/work_type">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/residence"
                android:textSize="20sp"
                android:textColor="#191414"
                android:textStyle="bold"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10sp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="24sp">
                <RadioButton
                    android:id="@+id/rb_rural"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_rural"
                    android:textSize="17sp"
                    android:textColor="#191414"/>

                <RadioButton
                    android:id="@+id/rb_urban"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_urban"
                    android:textSize="17sp"
                    android:textColor="#191414"
                    android:layout_marginStart="7sp"
                    android:layout_marginEnd="10sp"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/age_bmi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/gender">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textSize="20sp"
                android:textColor="#191414"
                android:textStyle="bold"
                android:layout_marginStart="20sp"/>

            <EditText
                android:id="@+id/et_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="18"
                android:textSize="20sp"
                android:textColor="#191414"
                android:inputType="number"
                android:ems="3"
                android:layout_marginStart="10sp"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bmi"
                android:textSize="20sp"
                android:textColor="#191414"
                android:textStyle="bold"
                android:layout_marginStart="92sp"/>

            <EditText
                android:id="@+id/et_bmi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="20"
                android:textSize="20sp"
                android:textColor="#191414"
                android:inputType="numberDecimal"
                android:ems="3"
                android:layout_marginStart="10sp"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/glucose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/age_bmi">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/glucose"
                android:textSize="20sp"
                android:textColor="#191414"
                android:textStyle="bold"
                android:layout_marginStart="20sp"/>

            <EditText
                android:id="@+id/et_glucose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="100"
                android:textSize="20sp"
                android:textColor="#191414"
                android:inputType="numberDecimal"
                android:ems="3"
                android:layout_marginStart="30sp"
                android:gravity="center"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_predict"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/smoking_status"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/btn_predict"
            android:textColor="#FFF"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_predict"
            android:gravity="center"
            android:textColor="@color/teal_700"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="20sp"/>
</RelativeLayout>